video z-index fix

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header {}
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 #nav-bar-links {
